--- a/vignettes/DECIPHERing.Rnw
+++ b/vignettes/DECIPHERing.Rnw
@@ -50,7 +50,7 @@
 \SweaveOpts{keep.source=TRUE}
 <<echo=false>>=
 options(continue=" ")
-options(width=60)
+options(width=80)
 @
 
 \tableofcontents
@@ -59,7 +59,7 @@ options(width=60)
 \section{About DECIPHER}
 %------------------------------------------------------------
 
-\term{D}atabase \term{E}nabled \term{C}ode for \term{I}deal \term{P}robe \term{H}ybridization \term{E}mploying \term{R} (\Rpackage{DECIPHER}) is a software toolset that can be used for deciphering and managing biological sequences efficiently using the \R{} statistical programming language.  The project originally sprang to life as a program for developing hybridization probes for a variety of applications using 16S rRNA sequences.  Although the program's functionality has expanded since its conception, it still maintains the name \Rpackage{DECIPHER} to this day.  \Rpackage{DECIPHER} is available under the terms of the GNU Public License version 3 (\url{http://www.gnu.org/copyleft/gpl.html}).
+\term{D}atabase \term{E}nabled \term{C}ode for \term{I}deal \term{P}robe \term{H}ybridization \term{E}mploying \term{R} (\Rpackage{DECIPHER}) is a software toolset that can be used for deciphering and managing biological sequences efficiently using the \R{} statistical programming language.  The project originally sprang to life as a program for developing hybridization probes for a variety of applications using 16S rRNA sequences.  The program's functionality has expanded considerably since its conception, and now \Rpackage{DECIPHER} can be used for next generation sequence analysis, multiple sequence alignment, and phylogenetics, in addition to oligonucleotide design.  \Rpackage{DECIPHER} is available under the terms of the GNU Public License version 3 (\url{http://www.gnu.org/copyleft/gpl.html}).
 
 %------------------------------------------------------------
 \section{Design Philosophy}
@@ -71,7 +71,7 @@ One of the core principles of \Rpackage{DECIPHER} is the idea of the non-destruc
 
 \subsection{Don't Reinvent the Wheel}
 
-\Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} package that is a core part of the Bioconductor suite (\url{http://www.bioconductor.org/}).  This package contains numerous functions for common operations such as searching, aligning, and reverse complementing sequences.  Furthermore, \Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} interface for handling sequence data so that sequences are stored in an \Robject{XStringSet}.  These objects are compatible with many useful packages in the Bioconductor suite.
+\Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} package that is a core part of the Bioconductor suite (\url{http://www.bioconductor.org/}).  This package contains numerous functions for common operations such as searching, manipulating, and reverse complementing sequences.  Furthermore, \Rpackage{DECIPHER} makes use of the \Rpackage{Biostrings} interface for handling sequence data so that sequences are stored in an \Robject{XStringSet}.  These objects are compatible with many useful packages in the Bioconductor suite.
 
 A wide variety of user objectives necessitates that \Rpackage{DECIPHER} be extensible to customized projects.  \R{} provides a simple way to place the power of thousands of packages at your fingertips.  Likewise, \R{} enables direct access to the speed and efficiency of the programming language \C{} while maintaining the utility of a scripting language.  Therefore, minimal coding skill is required to solve complex new problems.  Best of all, the \R{} statistical programming language is open source, and maintains a thriving user community so that direct collaboration with other \R{} users is available on several Internet forums \url{https://stat.ethz.ch/mailman/listinfo}.
 
@@ -83,9 +83,9 @@ Other time consuming tasks are handled efficiently.  The function \Rfunction{Fin
 
 \subsection{Stay Organized}
 
-It is no longer necessary to store related data in several different files.  \Rpackage{DECIPHER} is enabled by \Rpackage{RSQLite}, which is an \R{} interface to \term{SQLite} databases \url{http://www.sqlite.org/}.  \Rpackage{DECIPHER} creates an organized collection of sequences and their associated information known as a sequence database.  \term{SQLite} databases are flat files, meaning they can be handled just like any other file.  There is no setup required since \term{SQLite} does not require a server, unlike other client database engines.  These attributes of \term{SQLite} databases make sharing, backing-up, and storing sequence databases relatively straightforward.
+It is no longer necessary to store related data in several different files.  \Rpackage{DECIPHER} is enabled by \Rpackage{RSQLite}, which is an \R{} interface to \term{SQLite} databases \url{http://www.sqlite.org/}.  \Rpackage{DECIPHER} creates an organized collection of sequences and their associated information known as a sequence database.  \term{SQLite} databases are flat files, meaning they can be handled just like any other file.  There is no setup required since \term{SQLite} does not require a server, unlike other client database engines.  These attributes of \term{SQLite} databases make storing, backing-up, and sharing sequence databases relatively straightforward.
 
-Separate projects can be stored in distinct tables in the same sequence database.  Each new table is structured to include every sequence's description, identifier, and a unique key called the \term{row_name} all in one place.  The sequences are referenced by their \term{row_names} or \term{identifier} throughout most functions in the package.  New information created using \Rpackage{DECIPHER} functions is added as additional database columns to its respective sequences' \term{row_names}.  To prevent the database from seeming like a black box there is a function named \Rfunction{BrowseDB} that facilitates viewing of the database contents in a web browser.  A similar function is available to view sequences called \Rfunction{BrowseSequences}.
+Separate projects can be stored in distinct tables in the same sequence database.  Each new table is structured to include every sequence's description, identifier, and a unique key called the \term{row_name} all in one place.  The sequences are referenced by their \term{row_names} or \term{identifier} throughout most functions in the package.  Using \term{row_names}, new information created using \Rpackage{DECIPHER} functions is added as additional database columns to their respective sequences' rows in the database table.  To prevent the database from seeming like a black box there is a function named \Rfunction{BrowseDB} that facilitates viewing of the database contents in a web browser.  A similar function is available to view sequences called \Rfunction{BrowseSequences}.
 
 The amount of DNA sequence information available is currently increasing at a phenomenal rate.  \Rpackage{DECIPHER} stores individual sequences using \term{gzip} compression so that the database file takes up much less drive space than a standard text file of sequences.  The compressed sequences are stored in a hidden table that is linked to the information table.  For example, by default sequence information is stored in the table ``DNA'', and the associated sequences are stored in the table ``_DNA''.  Storing the sequences in a separate table greatly improves access speed when there is a large amount of sequence information.  Separating projects into distinct tables further increases query speed over that of storing every project in a single table.
 
@@ -100,11 +100,11 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \item Secondary functions for typical database tasks:
 \begin{enumerate} \item \Rfunction{IdConsensus} \item \Rfunction{IdentifyByRank} \item \Rfunction{IdLengths} \end{enumerate}
 \item Functions for phylogenetics with a set of sequences:
-\begin{enumerate} \item \Rfunction{ConsensusSequence} \item \Rfunction{DistanceMatrix} \item \Rfunction{IdClusters} \end{enumerate}
+\begin{enumerate} \item \Rfunction{ConsensusSequence} \item \Rfunction{DistanceMatrix} \item \Rfunction{IdClusters} \item \Rfunction{MaskAlignment} \end{enumerate}
 \item Functions for visualization with a web browser:
 \begin{enumerate} \item \Rfunction{BrowseDB} \item \Rfunction{BrowseSequences} \end{enumerate}
 \item Functions for multiple sequence alignment:
-\begin{enumerate} \item \Rfunction{AlignDB} \item \Rfunction{AlignProfiles} \item \Rfunction{AlignSeqs} \item \Rfunction{AlignTranslation} \item \Rfunction{MaskAlignment} \end{enumerate}
+\begin{enumerate} \item \Rfunction{AlignDB} \item \Rfunction{AlignProfiles} \item \Rfunction{AlignSeqs} \item \Rfunction{AlignTranslation} \end{enumerate}
 \item Functions related to chimeras:
 \begin{enumerate} \item \Rfunction{CreateChimeras} \item \Rfunction{FindChimeras} \item \Rfunction{FormGroups} \end{enumerate}
 \item Functions related to DNA microarrays:
@@ -112,7 +112,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \item Functions related to probes for fluorescence \textit{in situ} hybridization (FISH):
 \begin{enumerate} \item \Rfunction{CalculateEfficiencyFISH} \item \Rfunction{DesignProbes} \item \Rfunction{TileSeqs} \end{enumerate}
 \item Functions related to primers for polymerase chain reaction (PCR):
-\begin{enumerate} \item \Rfunction{CalculateEfficiencyPCR} \item \Rfunction{DesignPrimers} \item \Rfunction{TileSeqs} \end{enumerate}
+\begin{enumerate} \item \Rfunction{Amplify} \item \Rfunction{CalculateEfficiencyPCR} \item \Rfunction{DesignPrimers} \item \Rfunction{MeltDNA} \item \Rfunction{TileSeqs} \end{enumerate}
 \end{enumerate}
 
 %------------------------------------------------------------
@@ -155,7 +155,7 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \subsubsection{All platforms}
 
 \begin{enumerate}
-\item Install \R{} (version >= 2.13.0) from \url{http://www.r-project.org/}.
+\item Install the latest \R{} version from \url{http://www.r-project.org/}.
 \item Install \Rpackage{Biostrings} in R by entering:
 \begin{Schunk}
 \begin{Sinput}
@@ -184,11 +184,12 @@ The functions of DECIPHER can be grouped into several categories based on intend
 \end{Schunk}
 \item Second Option (more difficult but enables parallelization):
 \begin{enumerate}[(a)]
-\item Open the DECIPHER source folder.  Remove the file named ``Makevars'' in the ``src'' folder.  Then save a text-file with the line ``CC=gcc-4.2 -std=gnu99'' to ``~/.R/Makevars''.  This will force packages to be compiled with gcc-4.2 instead of the default llvm.
+\item Open the DECIPHER source folder.  Remove the file named ``Makevars'' in the ``src'' folder.  Then save a text-file with the line ``CC=gcc-4.2 -std=gnu99'' to ``{\raise.17ex\hbox{$\scriptstyle\sim$}}/.R/Makevars''.  This will force packages to be compiled with gcc-4.2 instead of the default llvm.
 \item Open Terminal, and in the command prompt enter:
 \begin{Schunk}
 \begin{Sinput}
 R CMD build --no-build-vignettes "<<path to DECIPHER source>>"
+PKG_CFLAGS=-fopenmp PKG_LIBS=-fopenmp
 R CMD INSTALL "<<path to newly built DECIPHER.tar.gz>>"
 \end{Sinput}
 \end{Schunk}
@@ -270,7 +271,7 @@ BrowseDB(dbConn, maxChars=20)
 
 Next let's identify our sequences by phylum and update this information in the database:
 <<expr4>>=
-r <- IdentifyByRank(dbConn, add2tbl=TRUE)
+r <- IdentifyByRank(dbConn, level=3, add2tbl=TRUE)
 BrowseDB(dbConn, maxChars=20)
 @
 
